--- a/main.html
+++ b/main.html
@@ -15,14 +15,14 @@
 <label for="address">Address</label>
 <input type="text" id="address" placeholder="Address">
 <label for="checkbox">Have you ever lived with a Dog before?</label>
-<input type="checkbox" id="checkbox">
+<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
 <label for="multiSelect">Please select your preferred breeds</label>
 <select id="multiSelect">
 <option value="1">1</option>
 <option value="2">2</option>
 <option value="3">3</option>
 </select>
-<input type="submit" id="submit">
+<input type="submit" value="submit">
 </form>
 </body>
 
