--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 <option value="2">2</option>
 <option value="3">3</option>
 </select>
-<input type="submit" value="submit">
+<input type="submit" value="Submit">
 </form>
 </body>
 
