--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 <option value="2">2</option>
 <option value="3">3</option>
 </select>
-<button type="submit" value="Submit">Sumbmit</button>
+<button type="submit">Submit</button>
 </form>
 </body>
 
