--- a/main.html
+++ b/main.html
@@ -1,29 +1,29 @@
-<!DOCTYPE html>
-
-<html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-<form method="post">
-<label for="name">Name</label>
-<input type="text" id="name" placeholder="Name">
-<label for="phone">Phone Number</label>
-<input type="text" id="phone" placeholder="Phone Number">
-<label for="address">Address</label>
-<input type="text" id="address" placeholder="Address">
-<label for="checkbox">Have you ever lived with a Dog before?</label>
-<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
-<label for="multiSelect">Please select your preferred breeds</label>
-<select id="multiSelect">
-<option value="1">1</option>
-<option value="2">2</option>
-<option value="3">3</option>
-</select>
-<button type="submit" id="submit">Submit</button>
-</form>
-</body>
-
-</html>
+	<!DOCTYPE html>
+	
+	<html>
+	
+	<head>
+		<link rel="stylesheet" href="styles.css">
+	</head>
+	
+	<body>
+	<form method="post">
+	<label for="name">Name</label>
+	<input type="text" id="name" placeholder="Name">
+	<label for="phone">Phone Number</label>
+	<input type="text" id="phone" placeholder="Phone Number">
+	<label for="address">Address</label>
+	<input type="text" id="address" placeholder="Address">
+	<label for="checkbox">Have you ever lived with a Dog before?</label>
+	<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
+	<label for="multiSelect">Please select your preferred breeds</label>
+	<select id="multiSelect">
+	<option value="1">1</option>
+	<option value="2">2</option>
+	<option value="3">3</option>
+	</select>
+	<input type="submit" value="Submit">
+	</form>
+	</body>
+	
+	</html>
