--- a/main.html
+++ b/main.html
@@ -79,7 +79,7 @@
             <input type="text" id="address" name="address" placeholder="Address" required>
             
             <label for="checkbox">Have you ever lived with a Dog before?</label>
-            <input type="checkbox" id="dogExperience" name="dogExperience" value="Have you ever lived with a Dog before?" required>
+            <input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?" required>
             
             <label for="multiSelect">Please select your preferred breeds (select at least 3)</label>
             <select id="multiSelect" name="breeds[]" multiple="multiple" required>
