--- a/main.html
+++ b/main.html
@@ -92,7 +92,7 @@
                 <!-- Add more breed options here -->
             </select>
             
-            <input type="submit" value="Submit">
+            <input type="submit" id="submit" value="Submit">
         </form>
     </div>
 </body>
